cabal-version:      2.4
name:               accel-sandbox
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             poop
maintainer:         poopy

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable accel-sandbox
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        cuda == 0.11.*,
        llvm-hs ^>=9.0,
        llvm-hs-pure ^>=9.0,
        accelerate ^>=1.3.0.0,
        accelerate-llvm ^>=1.3.0.0,
        accelerate-llvm-native ^>=1.3.0.0,
        accelerate-llvm-ptx ^>=1.3.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
        -threaded
    flags:
        llvm-hs:
            shared-llvm: true